--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Hello-World/style.css">
 
 </head>
 
@@ -31,7 +31,7 @@
     <footer>
         <P>Uma página desenvolvida por Alura Start</P>
     </footer>
-    <script src="main.js"></script>
+    <script src="/Hello-World/main.js"></script>
 </body>
 
 </html>
